修改了一些內容

--- a/Lab03/01OperatorPrecedence.html
+++ b/Lab03/01OperatorPrecedence.html
@@ -88,8 +88,16 @@
         // let a = x > 0 ? x : -1;
         // console.log(a);
 
-        let isLogin = false;
-        console.log(isLogin ? "登出" : "登入");
+        // let isLogin = false;
+        // console.log(isLogin ? "登出" : "登入");
+        //輸入資料
+        const age = parseInt(window.prompt("請輸入年紀", 18));
+        const result = age >= 18 ? "成年" : "未成年";
+        window.alert(result);
+
+        //運算
+        //輸出資料console.log()
+        //alert()
     </script>
 
 </body>
