--- a/Lab03/02if.html
+++ b/Lab03/02if.html
@@ -29,9 +29,6 @@
             console.log("a < b");
         }
 
-
-
-
         // var Transportation = "",
         //     money=parseInt(prompt("請輸入你有多少錢"));
         // if(money > 2500){
@@ -46,6 +43,8 @@
         //     Transportation = "摩托車";
         // }
         // console.log("台北到高雄坐 " + Transportation);
+
+        //TODO：請輸入三個數字比大小，印出最大值
 
     </script>
 </body>
