--- a/Lab03/04for.html
+++ b/Lab03/04for.html
@@ -1,17 +1,26 @@
 ﻿<!DOCTYPE html>
 <html lang="zh-tw">
+
 <head>
     <meta charset="UTF-8">
-    <title>04for.html</title>        
+    <title>04for.html</title>
 </head>
+
 <body>
-    <script>        
+    <script>
+        //TODO 改寫成 1+2+3...+99+100=5050
         let sum = 0;
         for (let i = 1; i <= 5; i++) {
             //sum=sum+i;
             sum += i;
-            console.log("i="+i+",sum="+sum);
+            console.log("i=" + i + ",sum=" + sum);
         }
+
+        // for (let i = 1; i <= 5; i++) {
+        //     console.log(`I Love JavaScript - ${i}`);
+        // }
+
     </script>
 </body>
+
 </html>
