--- a/Lab03/04for.html
+++ b/Lab03/04for.html
@@ -20,6 +20,29 @@
         //     console.log(`I Love JavaScript - ${i}`);
         // }
 
+        //TODO 列出1到100中不能被2整除也不能被3整除的數字
+
+        //九九乘法表
+        document.write('<table style="border:1px solid green">')
+        for (let i = 1; i <= 2; i++) {
+            //console.log(`i=${i}`);
+            document.write('<tr>')
+            for (let j = 1; j <= 3; j++) {
+                document.write(`<td>${i}*${j}=${i * j}</td>`)
+            }
+            document.write('</tr>')
+        }
+        document.write('</table>')
+
+        //i=1
+        //j=1
+        //j=2
+        //j=3
+        //i=2
+        //j=1
+        //j=2
+        //j=3
+
     </script>
 </body>
 
