--- a/Lab03/06breakContinue.html
+++ b/Lab03/06breakContinue.html
@@ -19,12 +19,14 @@
         }
 
         //======continue =====
-        for (let i = 0; i < 10; i++) {
-            if (i % 2 != 0) {
-                continue;
-            }
-            console.log(i);
-        }
+        // for (let i = 0; i < 10; i++) {
+
+        //     if (i % 2 != 0) {
+        //         //餘數不等於0(奇數)會執行continue
+        //         continue;
+        //     }
+        //     console.log(i);  //印出偶數的資料
+        // }
     </script>
 </body>
 
