--- a/Lab04/01functionMethod.html
+++ b/Lab04/01functionMethod.html
@@ -9,10 +9,17 @@
         //==========定義函數==================
         //方法一函數宣告，定義帶參數的函數
 
-        function sayHi(name, age){
+        function sayHi(age, name="Guest"){
             // console.log(arguments);
             // console.log(arguments[2]);
             //TODO name 沒有資料讓回傳guest
+            
+        //    if(!name){ //not false => true
+        //       name = "Guest";
+        //    }
+
+        //shortcut  && ||
+        //name = name || "Guest";
            
             return `Hello ${name}, You are ${age} years old.`;
         }
@@ -27,6 +34,10 @@
     //     console.log(result);
         // result = sayHi("Tom", 28, "Tom@company.com");
         let result = sayHi();
+        console.log(result);
+        result = sayHi(25,"Tom");
+        console.log(result);
+        result = sayHi(30);
         console.log(result);
 
         //JavaScript沒有規定function的參數及呼叫function時給予的參數數量必須要一致
