IIFE 立即執行函式

--- a/Lab04/02varScope.html
+++ b/Lab04/02varScope.html
@@ -54,11 +54,22 @@
         //     // console.log(age1);  //Uncaught ReferenceError: age1 is not defined
         // }
         // console.log(email);
-        a();
+        // a();
         // b();
         //呼叫函數
-        console.log(age);
+        //  console.log(age);
         //console.log(address); //aaaaaaaaaa
+
+        //3秒後會執行function(){}
+        // window.setTimeout(function () {
+        //     console.log("setTimeout");
+        // }, 3000);
+        // for (let i = 1; i <= 5; i++) {
+        //     //console.log(i); //i=6
+        //     window.setTimeout(function () {
+        //         console.log(i);  //??1、2、3、4、5、6
+        //     }, 3000);
+        // }
 
     </script>
 </body>
