--- a/Lab04/01functionMethod.html
+++ b/Lab04/01functionMethod.html
@@ -45,51 +45,51 @@
         //JavaScript沒有規定function的參數及呼叫function時給予的參數數量必須要一致
         //少掉的參數為undefined，而多的參數會被忽略
 
-        //函數的引數 
+        //函數的引數
 
         //預設參數值(ES6)
 
-        //其餘運算子 
+        //其餘運算子
         //函數宣告式
-        function sumAll(a, b, ...ab) {
-            // console.log(ab.length); //取得陣列裡面有多少筆資料
-            // console.log(ab[0]);  //陣列中的資料要讀出來是透過索引值
-            // console.log(ab[1]);
-            let sum = a + b;
-            for (let i = 0, max = ab.length; i < max; i++) {
-                sum += ab[i]; //sum = sum + ab[i]
-            }
-            return sum;
-        }
-        console.log(sumAll(1, 2));     //3
-        console.log(sumAll(1, 2, 3, 4)); //10
+        // function sumAll(a, b, ...ab) {
+        //     // console.log(ab.length); //取得陣列裡面有多少筆資料
+        //     // console.log(ab[0]);  //陣列中的資料要讀出來是透過索引值
+        //     // console.log(ab[1]);
+        //     let sum = a + b;
+        //     for (let i = 0, max = ab.length; i < max; i++) {
+        //         sum += ab[i]; //sum = sum + ab[i]
+        //     }
+        //     return sum;
+        // }
+        // console.log(sumAll(1, 2));     //3
+        // console.log(sumAll(1, 2, 3, 4)); //10
 
 
         //==========定義函數==================
         //方法二暱名函數
         //函數表達式
-        let sumAbc = function (...ab) {
-            //console.log("函數表達式");
-            let sum = 0;
-            for (let i = 0, max = ab.length; i < max; i++) {
-                sum += ab[i]; //sum = sum + ab[i]
-            }
-            return sum;
-        }
-        console.log(sumAbc(3, 4, 5));
+        // let sumAbc = function (...ab) {
+        //     //console.log("函數表達式");
+        //     let sum = 0;
+        //     for (let i = 0, max = ab.length; i < max; i++) {
+        //         sum += ab[i]; //sum = sum + ab[i]
+        //     }
+        //     return sum;
+        // }
+        // console.log(sumAbc(3, 4, 5));
 
 
         //==========定義函數==================
         //方法三箭頭函數(arrow function)
-        let sumXyz = (...ab) => {
-            //console.log("函數表達式");
-            let sum = 0;
-            for (let i = 0, max = ab.length; i < max; i++) {
-                sum += ab[i]; //sum = sum + ab[i]
-            }
-            return sum;
-        }
-        console.log(sumXyz(5, 6, 7));
+        // let sumXyz = (...ab) => {
+        //     //console.log("函數表達式");
+        //     let sum = 0;
+        //     for (let i = 0, max = ab.length; i < max; i++) {
+        //         sum += ab[i]; //sum = sum + ab[i]
+        //     }
+        //     return sum;
+        // }
+        // console.log(sumXyz(5, 6, 7));
 
 
 
@@ -106,14 +106,22 @@
         // }
         // console.log(sayHi("Steven"));
         //如果statement 只有一行，return 和 {} 可省略
-        let sayHi = name => `Hello ${name}!!`;
+        // let sayHi = name => `Hello ${name}!!`;
 
-        console.log(sayHi("Jack"));
+        // console.log(sayHi("Jack"));
 
 
 
 
         //===========IIFE=====================
+
+        (function (name) {
+            let age = 30;
+            alert(`Hello ${name}`);
+        }("Mary"));
+
+
+
 
 
     </script>
