--- a/Lab04/02varScope.html
+++ b/Lab04/02varScope.html
@@ -12,7 +12,7 @@
         //var vs let
         //1. var 變數可以重複宣告，let 變數不能重複宣告
         //2. var 宣告的變數 hoisting 變數提升，let 宣告的變數沒有? TDZ
-        //3. var 函數作用域funcatoin，let是區塊作用域{ }
+        //3. var 函數作用域function，let是區塊作用域{ }
 
 
         //console.log(age);  //Uncaught ReferenceError: age is not defined
