內建物件相關

--- a/Lab04/03hosting.html
+++ b/Lab04/03hosting.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
+
 <head>
     <meta charset="UTF-8">
-    <title>03hosting.html</title>
+    <title>03hoisting.html</title>
 </head>
+
 <body>
     <script>
-        //================ hosting 變數提升 ===========================
+        //================ hoisting 變數提升 ===========================
         //1. 不管變數宣告的位置在哪裡，程式載入時都會先找到所有變數與函數，
         //並完成宣告，才會開始執行其他程式。
         //2. 即使存取變數在變數宣告之前，也都找得到變數，即稱為Hosting。
@@ -16,9 +18,10 @@
         //============================================================
 
         console.log(a);
-        var a=10;
+        var a = 10;
 
 
     </script>
 </body>
+
 </html>
