--- a/Lab05/01globalObject.html
+++ b/Lab05/01globalObject.html
@@ -1,20 +1,29 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>01globalObject.html</title>
     <script>
-        console.log("eval('1>2')=" + eval('1>2'));
-        console.log("isNaN('123a')=" + isNaN('123a'));  //參數是否數字
-        console.log("isNaN('a123')=" + isNaN('a123'));
-        console.log("isNaN('123')=" + isNaN('123'));
+        // console.log("eval('1>2')=" + eval('1>2'));
+        // console.log("isNaN('123a')=" + isNaN('123a'));  //參數是否數字
+        // console.log("isNaN('a123')=" + isNaN('a123'));
+        // console.log("isNaN('123')=" + isNaN('123'));
         console.log("encodeURI('123&chen@iii.org.tw')=" + encodeURI('123&chen@iii.org.tw'));
-        console.log("encodeURI('中文')=" + encodeURI('中文'));
-        console.log("encodeURI('一')=" + encodeURI('一'));
-        console.log("decodeURI('%E4%B8%AD%E6%96%87')=" + decodeURI('%E4%B8%AD%E6%96%87'));
+        console.log("encodeURIComponent('123&chen@iii.org.tw')=" + encodeURIComponent('123&chen@iii.org.tw'));
+       // console.log("encodeURI('中文')=" + encodeURI('中文'));
+        // console.log("encodeURI('一')=" + encodeURI('一'));
+      //  console.log("decodeURI('%E4%B8%AD%E6%96%87')=" + decodeURI('%E6%96%87'));
+
+        // //isNaN => is not a number
+        // console.log(isNaN("aaaa")); // true
+        // console.log(isNaN("234")); // false
+
     </script>
 </head>
+
 <body>
 
 </body>
+
 </html>
