--- a/Lab05/04DateObject.html
+++ b/Lab05/04DateObject.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
+
 <head>
     <meta charset="UTF-8">
     <title>04DateObject.html</title>
 </head>
+
 <body>
     <script>
         //建立日期物件語法 1
         let d = new Date();
-
+        console.log(d);
         //建立日期物件語法 2
 
         //建立日期物件語法 3
@@ -17,9 +19,10 @@
         let theMonth = d.getMonth() + 1;
         let theDate = d.getDate();
         // console.log(d);
-        // console.log(`民國${theYear}年${theMonth}月${theDate}日`);
+        console.log(`民國${theYear}年${theMonth}月${theDate}日`);
 
 
     </script>
 </body>
+
 </html>
