--- a/Lab04/03hosting.html
+++ b/Lab04/03hosting.html
@@ -17,9 +17,24 @@
         //5. let 與 const 的宣告不會被初始化為 undefined
         //============================================================
 
-        console.log(a);
-        var a = 10;
+        // console.log(a);
+        // var a = 10;
 
+
+
+        // function sayHi() {
+        //     return "Hello, World";
+        // }
+
+        // let sayHi = function () {
+        //     return "Hello, World";
+        // }
+
+        let sayHi = () => {
+            return "Hello, World";
+        }
+
+        console.log(sayHi());
 
     </script>
 </body>
