--- a/Lab05/05Object.html
+++ b/Lab05/05Object.html
@@ -14,13 +14,17 @@
 
         //for..in
         //key:value
-        let person = { "name": "Tom", "age": 30, "email": "Tom@company.com" };
+        let person = { "name": "Tom", age: 30, "email": "Tom@company.com" };
+
         // console.log(person.name); //物件.屬性
+        //console.log(person["age"]); //物件[變數]
+
         for (let key in person) {
             //會從物件取key(property)放進前面的變數中
             console.log(key); //name、age
             console.log(person[key]); //透過key取value
         }
+
     </script>
 </body>
 
