--- a/Lab06/03eventHandlerMouseoverout.html
+++ b/Lab06/03eventHandlerMouseoverout.html
@@ -1,22 +1,26 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>03eventHandlerMouseoverout.html</title>
 </head>
+
 <body>
     <img id="idimg" src="Images/star.gif" />
     <script>
-        document.getElementById("idimg").addEventListener("mouseover",mouseover);  //事件繫結，滑鼠滑入
-        document.getElementById("idimg").addEventListener("mouseout",mouseout);    //事件繫結，滑鼠滑出
+        const theImg = document.getElementById("idimg");
+        theImg.addEventListener("mouseover", mouseover);  //事件繫結，滑鼠滑入
+        theImg.addEventListener("mouseout", mouseout);    //事件繫結，滑鼠滑出
 
         function mouseover() {
-            
+            idimg.src = "Images/chngstar.gif";
         }
 
         function mouseout() {
-            
+            idimg.src = "Images/star.gif";
         }
     </script>
 </body>
+
 </html>
