--- a/Lab08/WindowObject/02setclock.html
+++ b/Lab08/WindowObject/02setclock.html
@@ -1,16 +1,22 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>02setclock.html</title>
 </head>
-<body> 
-    <img alt="" src="WinImages/0.gif" /><img alt="" src="WinImages/1.gif" />:<img alt="" src="WinImages/2.gif" /><img alt="" src="WinImages/3.gif" />
+
+<body>
+    <img alt="" src="WinImages/0.gif" /><img alt="" src="WinImages/1.gif" />:<img alt="" src="WinImages/2.gif" /><img
+        alt="" src="WinImages/3.gif" />
+    <hr />
     <!--
     <img alt="" id="picH1" /><img alt="" id="picH2" />:<img alt="" id="picM1" /><img alt="" id="picM2" />:<img alt="" id="picS1" /><img alt="" id="picS2" />
     -->
+    <input type="button" id="button1" value="Start">
+    <div id="div1">00:00:00</div>
 
-    <script>        
+    <script>
         //建立日期
 
         //取得秒數，分割為兩位數
@@ -18,6 +24,55 @@
 
         //顯示圖片，對應秒數
 
+
+        // if (window.confirm("真的要刪除嗎?")) {
+        //     window.alert("去刪資料")
+        // } else {
+        //     window.alert("不刪")
+        // }
+
+        //window.setTimeout()
+        // setTimeout(() => {
+        //     console.log("timeout");
+        // }, 3000);
+        // let i = 0;
+        // let timer = setInterval(() => {
+        //     i += 1;
+        //     console.log(i);
+        //     if (i === 10) {
+        //         clearInterval(timer);
+        //     }
+        // }, 1000);
+        //找到要控制的對象
+        const btn = document.getElementById("button1");
+        const divClock = document.getElementById("div1");
+
+
+        //在甚麼使用者的行為下  事件
+        let timer = null;
+        btn.addEventListener("click", () => {
+            //要做甚麼事
+
+            if (btn.value === "Start") {
+                btn.value = "Stop";
+                //啟動計時器
+                timer = window.setInterval(() => {
+                    const today = new Date();
+                    const hours = today.getHours();
+                    const mins = today.getMinutes();
+                    const secs = today.getSeconds();
+                    divClock.textContent = `${hours}:${mins}:${secs}`;
+                }, 1000);
+            } else {
+                btn.value = "Start";
+                //停止計時器
+                window.clearInterval(timer);
+                //   divClock.textContent = `00:00:00`;
+            }
+
+        })
+
     </script>
 </body>
+
 </html>
