--- a/Lab06/04eventHandlerFocusBlur.html
+++ b/Lab06/04eventHandlerFocusBlur.html
@@ -4,9 +4,30 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>04eventHandlerFocusBlur.html</title>
+    <style>
+        /* input {
+            border: 2px dotted green;
+        } */
+
+        .s1 {
+            color: green;
+            text-decoration: underline;
+        }
+
+        .s2 {
+            background-color: lightblue;
+            padding: 10px;
+        }
+
+        .s3 {
+            color: red;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
+    <h1 id="myH" class="s1">JavaScript Style Change</h1>
     <label>name:</label><input type="text" id="idName" />
     <br />
     <label>password:</label><input type="password" id="idPwd" />
@@ -18,21 +39,25 @@
         <option value="3">桃園市</option>
     </select>
     <script>
+        //idName.addEventListener("blur", blur)
         const txtName = document.getElementById("idName");
         const sel = document.getElementById("idaddr");
-        txtName.addEventListener("blur", blur);  //事件繫結，焦點離開
+        // txtName.addEventListener("blur", blur);  //事件繫結，焦點離開
         txtName.addEventListener("focus", focus);  //事件繫結，取得焦點
         txtName.addEventListener("change", change);  //事件繫結，改變內容            
         sel.addEventListener("change", Addrchange);
 
         function blur() {
             console.log("blur" + txtName.value);
-            txtName.style.backgroundColor = '';
+            //txtName.style.backgroundColor = '';
         }
 
         function focus() {
-            console.log("focus");
             txtName.style.backgroundColor = 'silver';
+            txtName.style.borderStyle = "dotted";
+            console.log("focus");
+
+
         }
 
         function change() {
@@ -47,7 +72,19 @@
             console.log(sel.options[i]);
             console.log(sel.options[i].value);
             console.log(sel.options[i].text);
-        }       
+        }
+
+        //============================================
+        const theH = document.getElementById("myH");
+        theH.addEventListener("mouseover", () => {
+            theH.classList.remove("s1");
+            //    theH.classList.add("s2");
+            theH.classList.add("s3");
+        })
+        theH.addEventListener("click", () => {
+            console.log(theH.classList.contains("s2")); //true false
+            theH.classList.toggle("s2");
+        })
     </script>
 </body>
 
