--- a/Lab08/03locationObject.html
+++ b/Lab08/03locationObject.html
@@ -1,20 +1,26 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>03locationObject.html</title>
 </head>
+
 <body>
     <button onclick="location.href='https://www.ispan.com.tw';">ispan(href)</button>
     <button onclick="location.replace('https://www.ispan.com.tw');">ispan(replace)</button>
     <script>
+        //http://127.0.0.1:5500/Lab08/WindowObject/02setclock.html
         console.log("location information:");
         console.log("location protocol=" + location.protocol);
-        console.log("location hostname=" + location.hostname);
-        console.log("location port=" + location.port); //窗口,埠
-        console.log("location host=" + location.host);
-        console.log("location pathname=" + location.pathname);
-        console.log("location hash=" + location.hash);        
+        //http => 80  https => 443
+        console.log("location hostname=" + location.hostname); //127.0.0.1
+        console.log("location port=" + location.port); //窗口,埠 5500
+        console.log("location host=" + location.host); //127.0.0.1:5500
+        console.log("location pathname=" + location.pathname); //Lab08/WindowObject/
+        console.log("location search=" + location.search); //?keyword=js&id=1
+        console.log("location hash=" + location.hash);   //#b1     
     </script>
 </body>
+
 </html>
